--- a/client/styles/Login.module.css
+++ b/client/styles/Login.module.css
@@ -5,3 +5,10 @@
 .mt{
     margin-top: 20px;
 }
+
+.utils{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+}
