--- a/client/styles/App.module.css
+++ b/client/styles/App.module.css
@@ -18,6 +18,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    width: 100%;
 }
 
 /* hiding on break points */
@@ -33,15 +34,14 @@
    .sidebar {
        display: none;
    }
-
    .posts{
        margin: 10px 50px;
    }
-
    .feedContainer{
        margin-left: 0;
    }
 }
+
 @media only screen and (max-width: 1023px){
    .posts {
        display: none;
